--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <link rel="stylesheet" href="assets/css/main.css">
 
 </head>
-<body class="open-menu">
+<body>
 
     <header id="header">
 
@@ -41,7 +41,7 @@
             </svg>
         </button>
 
-        <div class="menu logged">
+        <div class="menu">
 
             <nav>
 
