--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <meta name="msapplication-TileImage" content="assets/images/ms-icon-144x144.png"/>
     <meta name="theme-color" content="#E1DEDD"/>
     <meta name="description" content="Conheça a Ferrai Auto Center"/>
+    <link rel="preload" href="assets/css/main.css" as="style">
     <link rel="stylesheet" href="assets/css/main.css">
 
 </head>
@@ -266,7 +267,7 @@
 
     <footer id="footer">
 
-        <button type="button">
+        <button type="button" aria-label="Ir para o topo">
             <svg xmlns="http://www.w3.org/2000/svg" width="64.317" height="64.317" viewBox="0 0 64.317 64.317"><path d="M0,0H64.317V64.317H0Z" fill="none"/><path d="M9.779,27.858l12.3-12.274,12.3,12.274,3.779-3.779L22.079,8,6,24.079Z" transform="translate(10.079 13.439)"/></svg>
         </button>
 
